2008-06-21  Stefan Kost  <ensonic@users.sf.net>

	* docs/reference/gobject/tmpl/gparamspec.sgml:
	* gobject/gparam.c:
	* gobject/gparam.h:
	  Migrating docs.

2008-06-21  Stefan Kost  <ensonic@users.sf.net>

	* gobject/gboxed.c:
	* gobject/gclosure.c:
	* gobject/genums.c:
	* gobject/gvalue.c:
	  Use file-names from the section file for SECTION: comments.

2008-06-21  Stefan Kost  <ensonic@users.sf.net>

	* docs/reference/gobject/tmpl/generic_values.sgml:
	* gobject/gboxed.h:
	* gobject/gtype.h:
	* gobject/gvalue.c:
	* gobject/gvalue.h:
	* gobject/gvaluetypes.c:
	  Migrating docs.

2008-06-21  Stefan Kost  <ensonic@users.sf.net>

	* gobject/genums.h:
	  Fix documentation for return values.

2008-06-21  Stefan Kost  <ensonic@users.sf.net>

	* docs/reference/gobject/tmpl/gclosure.sgml:
	* gobject/gboxed.h:
	* gobject/gclosure.c:
	* gobject/gclosure.h:
	* gobject/gobject.c:
	* gobject/gsourceclosure.c:
	* gobject/gsourceclosure.h:
	  Migrating docs.

2008-06-21  Tor Lillqvist  <tml@novell.com>

	* glib/gstdio.c: Improve Windows-specific parts of
	documentation. Mention the different C library issue in more
	places.

2008-06-21  Stefan Kost  <ensonic@users.sf.net>

	* docs/reference/gobject/gobject-sections.txt:
	  Remove duplicated entries. They are documented and should be shown.

2008-06-21  Stefan Kost  <ensonic@users.sf.net>

	* docs/reference/gobject/tmpl/enumerations_flags.sgml:
	* gobject/genums.c:
	* gobject/genums.h:
	  Migrating docs.

2008-06-21  Stefan Kost  <ensonic@users.sf.net>

	* docs/reference/gobject/tmpl/gboxed.sgml:
	* gobject/gboxed.c:
	* gobject/gboxed.h:
	* gobject/gvaluetypes.c:
	  Migrating docs.

2008-06-20  Sebastian Dröge  <slomo@circular-chaos.org>

	Bug 316221 - G_LOCK warns about breaking strict-aliasing rules

	* configure.in:
	* glib/gthread.h: Revert previous patch as it doesn't improve the
	situation and results in other warnings.

2008-06-16  Christian Persch  <chpe@gnome.org>

	Bug 539123 – annotate g_d[n]gettext with G_GNUC_FORMAT